# debug-bevy

./: Cargo.toml  LICENSE.md
.github/workflows/: debug.yml  main.yml
assets/data/: define.basetypes.toml  define.difficulties.toml  define.discoveries.toml  define.followers.toml  define.regions.toml  define.suspicion-events.toml  define.tasks.toml
assets/text/en-US/: achievements.ftl  bases.ftl  debug.ftl  discoveries.ftl  esc-menu.ftl  followers.ftl  funds.ftl  intro.ftl  main-menu.ftl  modifiers.ftl  regions.ftl  save-load.ftl  suspicions.ftl  tasks.ftl  ui.ftl
resources/: abandoned-hospital.graphite  apartment.graphite  castle.graphite  old-farmhouse.graphite  pause.xcf
src/: achievements.rs  bases.rs  common.rs  config.rs  constants.rs  dev.rs  discoveries.rs  effects.rs  followers.rs  funds.rs  lib.rs  main.rs  main_loop.rs  main_menu.rs  modifiers.rs  new_game.rs  regions.rs  rng.rs  save_load.rs  state.rs  suspicion.rs  tasks.rs  text.rs  time.rs
src/ui/: bases.rs  buttons.rs  dialog.rs  discoveries.rs  esc_menu.rs  main_menu.rs  menu.rs  mod.rs  regions.rs  save_load.rs  scroll.rs  sliders.rs  toasts.rs  tooltip.rs
