[package]
name = "apocalyptosis"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
dev = ["bevy/dev"]

[dependencies]
bevy_common_assets = { version = "0.16.0", features = ["toml"] }
chrono = { version = "0.4.44", default-features = false, features = ["std", "serde", "now"] }
bevy_ui_text_input = "0.7.0"
directories = "6.0.0"
fluent = "0.17.0"
fluent-datetime = "0.2.0"
fluent-syntax = "0.12.0"
icu = "2.2.0"
line-numbers = "0.4.0"
moonshine-save = "0.6.1"
pyri_tooltip = "0.6.0"
rand = "0.10.1"
rand_distr = "0.6.0"
ron = "0.12.1"
serde = "1.0.228"
serde_derive = "1.0.228"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
unic-langid = { version = "0.9.6", features = ["macros"] }

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
    # This pulls in a lot of default features, aimed at 2D games
    "2d",
    # This is because the main map background asset is a jpg
    "jpeg",
    # Only x11 support is default on linux
    "wayland",
    # for scrollbars
    "experimental_bevy_ui_widgets",
]

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
# The Query system-parameters often triggers this, but they are self-documenting.
type_complexity = "allow"
too_many_arguments = "allow"

doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[lints.rust]
unused_qualifications = "warn"
