[package]
name = "apocalyptosis"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
bevy_common_assets = { version = "0.16.0", features = ["toml"] }
bevy_ui_text_input = "0.7.0"
chrono = { version = "0.4.44", default-features = false, features = [
  "now",
  "serde",
  "std"
] }
directories = "6.0.0"
either = "1.16.0"
fluent = "0.17.0"
fluent-datetime = "0.2.0"
icu = "2.2.0"
indexmap = "2.14.0"
line-numbers = "0.4.0"
moonshine-save = "0.6.1"
rand = "0.10.1"
rand_distr = "0.6.0"
ron = "0.12.1"
serde = "1.0.228"
serde_derive = "1.0.228"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
# Ensure preserve order in tables loaded
# This has to match the version of toml used by bevy_common_assets
toml = { version = "0.9.12", features = ["fast_hash"] }
unic-langid = { version = "0.9.6", features = ["macros"] }

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
  # This pulls in a lot of default features, aimed at 2D games
  "2d",
  # for scrollbars
  "experimental_bevy_ui_widgets",
  # This is because the main map background asset is a jpg
  "jpeg",
]

[features]
dev = ["bevy/dev"]

[lints.clippy]
# Ugly code
cast_lossless = "allow"
# This is too noisy when we do things like usize to i64 on values that will never get that large.
cast_possible_wrap = "allow"
# not much we can do about that
cast_precision_loss = "allow"
# const is a contract we don't always want
missing_const_for_fn = "allow"
# Something like Res<AssetServer> is warned about otherwise.
needless_pass_by_value = "allow"
# This one just makes ugly code
option_if_let_else = "allow"
# Same, systems need many Query arguments.
too_many_arguments = "allow"
# Usually these lines are just component bundles
too_many_lines = "allow"
# The Query system-parameters often triggers this, but they are self-documenting.
type_complexity = "allow"
# Often it's clearer to use the struct name, if it's an enum.
use_self = "allow"
# We do this a lot in bevy
wildcard_imports = "allow"

# disagreement about this lint
option_option = "allow"

nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# a selection of warnings from clippy's restricted set
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_add = "warn"
todo = "warn"

# warnings enabled in bevy itself
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
nonstandard_macro_braces = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[lints.rust]
unused_qualifications = "warn"

future_incompatible = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
noop_method_call = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"

[profile.dev.package."*"]
opt-level = 3
